further updates on API specification
